# prisoners_delema

./: CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  binArray.cpp  binArray.hpp
tests/: CMakeLists.txt  test_app.cpp
